k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: mern-app-ns
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: mern-app-ns
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: dhruvmoradiya69000/mern-backend:latest
          ports:
            - containerPort: 5050
