k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mern-app
spec:
  selector:
    app: backend
  ports:
    - port: 5050
      targetPort: 5050
      nodePort: 30002
  type: NodePort
