k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: mern-app-ns
  labels:
    app: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      #nodePort: 30080
