k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mern-app
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
    nodePort: 30003
  type: NodePort
