k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: locahost
    http:
      paths:
        #-----------------frontend-----------------#
        - path: ""
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
        #-----------------backend-----------------#
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: backend
              port:
                number: 5050
